err/products.atbibliostyles.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/ATBiblioStyles'...
Listing './lib/python3.5/site-packages/Products/ATBiblioStyles/content'...
Listing './lib/python3.5/site-packages/Products/ATBiblioStyles/doc'...
Listing './lib/python3.5/site-packages/Products/ATBiblioStyles/doc/BibrefStyleExample'...
Listing './lib/python3.5/site-packages/Products/ATBiblioStyles/exportimport'...
Listing './lib/python3.5/site-packages/Products/ATBiblioStyles/i18n'...
Listing './lib/python3.5/site-packages/Products/ATBiblioStyles/profiles'...
Listing './lib/python3.5/site-packages/Products/ATBiblioStyles/profiles/default'...
Listing './lib/python3.5/site-packages/Products/ATBiblioStyles/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/ATBiblioStyles/skins'...
Listing './lib/python3.5/site-packages/Products/ATBiblioStyles/skins/bibliography_styles'...
Compiling './lib/python3.5/site-packages/Products/ATBiblioStyles/skins/bibliography_styles/dummy_refs.py'...
***   File "./lib/python3.5/site-packages/Products/ATBiblioStyles/skins/bibliography_styles/dummy_refs.py", line 30
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xe4 in position 0: unexpected end of data

Compiling './lib/python3.5/site-packages/Products/ATBiblioStyles/skins/bibliography_styles/sortBibrefDictList.py'...
***   File "./lib/python3.5/site-packages/Products/ATBiblioStyles/skins/bibliography_styles/sortBibrefDictList.py", line 28
    return dictlist
                  ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/ATBiblioStyles/styles'...
Listing './lib/python3.5/site-packages/Products/ATBiblioStyles/tests'...
Listing './lib/python3.5/site-packages/Products/ATBiblioStyles/tool'...
Listing './lib/python3.5/site-packages/Products.ATBiblioStyles-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
